--- a/backend/package.json
+++ b/backend/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "express": "^4.19.2",
+    "express-validator": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.0"
   },
@@ -11,11 +12,12 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.12.12",
+    "nodemon": "^3.1.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   },
   "scripts": {
     "build": "tsc",
-    "start": "ts-node src/server.ts"
+    "start": "nodemon"
   }
 }
