--- a/backend/package.json
+++ b/backend/package.json
@@ -1,12 +1,14 @@
 {
   "dependencies": {
     "@types/cors": "^2.8.17",
+    "@types/multer": "^1.4.11",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "express-validator": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.4.0"
+    "mongoose": "^8.4.0",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
