--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,8 @@
     "express-validator": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.0",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "xss": "^1.0.15"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
