--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "attacker": "npm start --prefix Attacker",
     "start": "concurrently \"npm run backend\" \"npm run attacker\"",
     "update": "npm install && cd frontend && npm install && cd ../backend && npm install && cd ../Attacker && npm install && echo Updated dependencies for all 3 directories"
+  },
+  "dependencies": {
+    "xss": "^1.0.15"
   }
 }
